<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/liststyle"
        android:text="@string/add_new_klass"
        android:textStyle="bold"
        android:gravity="start"
        android:textSize="40sp"
        />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/liststyle"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/klassName"
                    android:textSize="20sp"
                    android:id="@+id/textView"
                    android:layout_column="1"/>

            <EditText
                    android:layout_width="106dp"
                    android:background="@drawable/edittext_rounded_corners"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/editTextKlassName"
                    android:layout_column="2"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/numofstudents"
                    android:id="@+id/textView2"
                    android:textSize="20sp"
                    android:layout_column="1"/>

            <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_numOfStudents"
                    android:background="@drawable/edittext_rounded_corners"
                    android:hint="eg 72"
                    android:inputType="number"

                    android:layout_column="2"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="match_parent">

            <Button
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:id="@+id/addKlassButton"
                android:layout_height="wrap_content"
                android:text="@string/addKlass"
                android:layout_gravity="center_horizontal"
                android:layout_column="2"/>
        </TableRow>
    </TableLayout>


</LinearLayout>