<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNewLecture"
        style="@style/liststyle"
        android:textStyle="bold"
        android:textSize="40sp"
        />


    <TableLayout
        style="@style/liststyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:id="@+id/textView"
                    android:layout_column="1"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:background="@drawable/edittext_rounded_corners"
                    android:id="@+id/editTextLectureName"
                    android:layout_column="2"
                    android:hint="eg Physics"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectClass"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:layout_column="1"/>

            <Spinner
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_column="2"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From"
                android:id="@+id/textView4"
                android:layout_column="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:background="@drawable/edittext_rounded_corners"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"

                android:ems="10"
                android:id="@+id/editTextStartingRoll"
                android:layout_column="2"
                android:hint="starting roll no"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To"
                android:id="@+id/textView5"
                android:layout_column="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_rounded_corners"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/editTextLastRoll"
                android:layout_column="2"
                android:hint="last roll no"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Extra info"
                android:id="@+id/textView6"
                android:layout_column="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_rounded_corners"
                android:id="@+id/editTextRemarks"
                android:layout_column="2"
                android:hint="eg : a batch, 304"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_marginTop="15dp"
                style="@style/liststyle"
                android:layout_width="wrap_content"
                android:id="@+id/addKlassButton"
                android:layout_height="wrap_content"
                android:text="@string/addLecture"
                android:layout_gravity="center_horizontal"
                android:layout_column="2"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
</ScrollView>